// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Task/> should display done task 1`] = `
<li
  className="list-item list-item_done"
>
  <input
    className="list-item__checkbox"
    defaultChecked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="list-item__text"
  >
    Task1
  </span>
  <button
    className="list-item__delete-btn"
    onClick={[Function]}
  />
</li>
`;

exports[`<Task/> should display done task 2`] = `
<li
  className="list-item"
>
  <input
    className="list-item__checkbox"
    defaultChecked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="list-item__text"
  >
    Task1
  </span>
  <button
    className="list-item__delete-btn"
    onClick={[Function]}
  />
</li>
`;

exports[`<Task/> should display undone task 1`] = `
<li
  className="list-item"
>
  <input
    className="list-item__checkbox"
    defaultChecked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    className="list-item__text"
  >
    Task1
  </span>
  <button
    className="list-item__delete-btn"
    onClick={[Function]}
  />
</li>
`;
